	PR middle-end/43057 	* fold-const.c (pedantic_non_lvalue_loc): Unshare x before 	setting location.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167037 138bc75d-0d04-0410-961f-82ee72b054a4